Fixing a small bug that appears only on mobile devices where the meta sidebar can be briefly glimpsed if a users scrolls heavily up or down

--- a/app/css/data-cacher.css
+++ b/app/css/data-cacher.css
@@ -49,7 +49,6 @@ h3 {
   font-size:              .8em;
   font-weight:            600;
   font-variant:           small-caps;
-  display: inline;
 }
 
 .shadow {
